--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>Out of Stock</p>
+              <p>In Stock</p>
               <h1>AGWYT* Grey Tracksuit</h1>
               <h2>200 lv.</h2>
               <span class="discount">220 lv.</span>
@@ -75,7 +75,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>Out of Stock</p>
+              <p>In Stock</p>
               <h1>Voam* Black Tracksuit</h1>
               <h2>190 lv.</h2>
               <span class="discount">205 lv.</span>
@@ -98,7 +98,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>AGWYT* TEE White</h1>
-              <h2>60 lv.</h2>
+              <h2>50 lv.</h2>
+              <span class="discount">60 lv.</span>
             </div>
           </div>
 
@@ -118,7 +119,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>AGWYT* TEE Black</h1>
-              <h2>60 lv.</h2>
+              <h2>50 lv.</h2>
+              <span class="discount">60 lv.</span>
             </div>
           </div>
 
@@ -140,7 +142,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>Out of Stock</p>
+              <p>In Stock</p>
               <h1>Voam* Hoodie black</h1>
               <h2>105 lv.</h2>
             </div>
@@ -164,9 +166,9 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>Out of Stock</p>
+              <p>In Stock</p>
               <h1>AGWYT* Grey Hoodie</h1>
-              <h2>100 lv.</h2>
+              <h2>110 lv.</h2>
             </div>
           </div>
 
@@ -188,7 +190,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>Out of Stock</p>
+              <p>In Stock</p>
               <h1>Voam* Black Pants</h1>
               <h2>100 lv.</h2>
             </div>
@@ -212,7 +214,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>Out of Stock</p>
+              <p>In Stock</p>
               <h1>AGWYT* Grey Pants</h1>
               <h2>110 lv.</h2>
             </div>
